--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -50,4 +50,7 @@
         <item name="android:windowEnterTransition">@transition/detail_enter</item>
     </style>
 
+    <style name="Theme.MovieHub.SearchActivity" parent="Theme.MovieHub">
+    </style>
+
 </resources>
