--- a/app/src/main/res/layout/similar_movies_layout.xml
+++ b/app/src/main/res/layout/similar_movies_layout.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/similar_movies_ll"
     android:layout_width="match_parent"
@@ -11,7 +10,7 @@
         android:id="@+id/similar_movies_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="32dp"
+        android:padding="16dp"
         android:text="Similar Movies"
         android:textColor="@color/primary_text_light"
         android:textSize="20sp"
