Updated UI on the details screens

--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -69,20 +69,9 @@
             android:descendantFocusability="blocksDescendants"
             android:orientation="vertical">
 
-            <LinearLayout
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/movie_poster_iv"
-                    android:layout_width="104dp"
-                    android:layout_height="156dp"
-                    android:background="@drawable/gradient_bg"
-                    android:scaleType="centerCrop"
-                    android:transitionName="@string/transition_movie_thumbnail" />
+                android:layout_height="wrap_content">
 
                 <LinearLayout
                     android:id="@+id/movie_details_header_ll"
@@ -91,8 +80,8 @@
                     android:layout_gravity="bottom"
                     android:background="@color/grey_400"
                     android:gravity="center"
-                    android:orientation="vertical"
-                    android:padding="16dp">
+                    android:paddingLeft="120dp"
+                    android:orientation="vertical">
 
                     <com.etiennelawlor.moviehub.presentation.common.widget.CustomFontTextView
                         android:id="@+id/title_tv"
@@ -100,13 +89,23 @@
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
                         android:maxLines="3"
+                        android:padding="16dp"
                         android:textColor="@color/primary_text_dark"
                         android:textSize="20sp"
                         app:textFont="lato_medium" />
 
                 </LinearLayout>
 
-            </LinearLayout>
+                <ImageView
+                    android:id="@+id/movie_poster_iv"
+                    android:layout_width="104dp"
+                    android:layout_height="156dp"
+                    android:layout_marginLeft="16dp"
+                    android:background="@drawable/gradient_bg"
+                    android:scaleType="centerCrop"
+                    android:transitionName="@string/transition_movie_thumbnail" />
+
+            </FrameLayout>
 
             <ProgressBar
                 android:id="@+id/pb"
@@ -121,8 +120,6 @@
                 android:id="@+id/movie_details_body_ll"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
                 android:orientation="vertical">
 
                 <RelativeLayout
