--- a/app/src/main/res/layout/television_shows_empty_layout.xml
+++ b/app/src/main/res/layout/television_shows_empty_layout.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:gravity="center"
-        android:text="No available movies."
+        android:text="@string/no_available_movies"
         android:textColor="@color/secondary_text_light"
         android:textSize="20sp"
         app:textFont="lato_medium" />
