--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -35,7 +35,7 @@
                     android:id="@+id/backdrop_iv"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:scaleType="centerCrop" />
+                    android:scaleType="centerCrop"/>
 
             </FrameLayout>
 
@@ -103,7 +103,8 @@
                     android:layout_marginLeft="16dp"
                     android:background="@drawable/gradient_bg"
                     android:scaleType="centerCrop"
-                    android:transitionName="@string/transition_movie_thumbnail" />
+                    android:transitionName="@string/transition_movie_thumbnail"
+                    android:contentDescription="@string/movie_poster"/>
 
             </FrameLayout>
 
@@ -176,7 +177,7 @@
                     <com.etiennelawlor.moviehub.presentation.common.widget.CustomFontTextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Overview"
+                        android:text="@string/overview"
                         android:textColor="@color/primary_text_dark"
                         android:textSize="18sp"
                         app:textFont="lato_medium" />
@@ -193,7 +194,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        android:text="Status"
+                        android:text="@string/status"
                         android:textColor="@color/primary_text_dark"
                         android:textSize="18sp"
                         app:textFont="lato_medium" />
@@ -210,7 +211,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        android:text="Release Date"
+                        android:text="@string/release_date"
                         android:textColor="@color/primary_text_dark"
                         android:textSize="18sp"
                         app:textFont="lato_medium" />
@@ -227,7 +228,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        android:text="Budget"
+                        android:text="@string/budget"
                         android:textColor="@color/primary_text_dark"
                         android:textSize="18sp"
                         app:textFont="lato_medium" />
@@ -244,7 +245,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        android:text="Revenue"
+                        android:text="@string/revenue"
                         android:textColor="@color/primary_text_dark"
                         android:textSize="18sp"
                         app:textFont="lato_medium" />
