--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -31,7 +31,7 @@
                     android:background="@null"
                     android:alpha="0.0"
                     android:ellipsize="end"
-                    android:hint="Search Movies, TV Shows, and People"
+                    android:hint="@string/search_movies_tv_shows_and_people"
                     android:inputType="textCapWords"
                     android:singleLine="true"
                     android:textSize="16sp"
