--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -30,6 +30,7 @@
                     android:layout_centerVertical="true"
                     android:layout_toLeftOf="@+id/search_pb"
                     android:layout_alignWithParentIfMissing="true"
+                    android:alpha="0.0"
                     android:background="@null"
                     android:ellipsize="end"
                     android:hint="@string/search_movies_tv_shows_and_people"
@@ -37,8 +38,6 @@
                     android:singleLine="true"
                     android:textSize="16sp"
                     app:textFont="lato_medium" />
-
-                <!--android:alpha="0.0"-->
 
                 <ProgressBar
                     android:id="@+id/search_pb"
